# homer

./: .gitignore  README.md  cli.py  homer.py  pyproject.toml
homer/: __init__.py  core.py
public/posts/: index.html
src/homer/: cli.py  core.py  globals.py  utils.py
testdir/: index.html
