[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homer"
version = "0.1.0"
description = "A minimalist SSG framework"
authors = [{ name = "Max Woolf", email = "max@woolf.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "click",
    "markdown",
    "jinja2",
    "fastapi",
    "uvicorn",
    "watchdog",
    "lark"
]

[project.scripts]
homer = "homer.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]